--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "seed": "node script/seed.js",
     "start": "node server",
     "start-watch": "nodemon server --ignore public --ignore client",
-    "start:dev": "NODE_ENV='development' npm run wepack-watch & NODE_ENV='development' npm run start-watch",
+    "start:dev": "NODE_ENV='development' npm run webpack-watch & NODE_ENV='development' npm run start-watch",
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
   },
   "repository": {
@@ -43,5 +43,9 @@
     "react-dom": "^16.8.6",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
+  },
+  "dependencies": {
+    "pg": "^7.12.0",
+    "sequelize": "^5.12.2"
   }
 }
