--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "seed": "node script/seed.js",
     "start": "node server",
     "start-watch": "nodemon server --ignore public --ignore client",
-    "start:dev": "NODE_ENV='development' npm run wepack-watch & NODE_ENV='development' npm run start-watch",
-    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
+    "start:dev": "NODE_ENV='development' npm run webpack-watch & NODE_ENV='development' npm run start-watch",
+    "test": "NODE_ENV='test' mocha \"./test/*.spec.js\"  --require @babel/polyfill"
   },
   "repository": {
     "type": "git",
@@ -39,9 +39,17 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
+    "dotenv": "^8.0.0",
+    "mocha": "^6.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "supertest": "^4.0.2",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.16.2"
   }
 }
