--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node server",
     "start-watch": "nodemon server --ignore public --ignore client",
     "start:dev": "NODE_ENV='development' npm run webpack-watch & NODE_ENV='development' npm run start-watch",
-    "test": "NODE_ENV='test' mocha \"./test/*.spec.js\"  --require @babel/polyfill"
+    "test": "NODE_ENV='test' mocha \"./test/*.spec.js\"  --require @babel/polyfill --require mocha-snapshots"
   },
   "repository": {
     "type": "git",
@@ -42,9 +42,11 @@
     "chai": "^4.2.0",
     "dotenv": "^8.0.0",
     "mocha": "^6.2.0",
+    "mocha-snapshots": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "supertest": "^4.0.2",
+    "supertest-session": "^4.0.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   },
