--- a/package.json
+++ b/package.json
@@ -42,16 +42,22 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "connect-session-sequelize": "^6.0.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "heroku": "^7.27.1",
     "pg": "^7.12.0",
-    "sequelize": "^5.12.2",
-    "query-string": "^6.8.2"
+    "query-string": "^6.8.2",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunks": "^1.0.0",
+    "sequelize": "^5.12.2"
   }
 }
