--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^5.0.1",
     "redux-logger": "^3.0.6",
     "supertest": "^4.0.2",
+    "supertest-session": "^4.0.0",
     "webpack": "^4.38.0",
     "webpack-cli": "^3.3.6"
   },
