--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "express",
     "sessions"
   ],
-  "author": "Hugo Campos, Katherine Peterson, Conner Stennett",
+  "contributors": ["Hugo Campos", "Katherine Peterson", "Conner Stennett"],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/1904-cpu-projects/kach/issues"
