--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-redux": "^3.0.1",
     "mocha": "^6.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
